IGNITE-17432 Remove MaxPermSize option from ignitevisorcmd to provide compatibility with jdk17 (#10173)
Co-authored-by: liyujue <liyujue@ignite-service.cn>
(cherry picked from commit 33fafc4b707f6fac4b4c45ca45fab9aedf559f7a)